--- a/index.html
+++ b/index.html
@@ -94,11 +94,17 @@
         }
         function tap() {
             if (gameData.energy <= 0) return;
+            const firstTapUnlocked = !gameData.achievements.includes('first_tap');
             const power = getTapPower();
             gameData.balance += power;
             gameData.energy = Math.max(0, gameData.energy - 1);
             gameData.experience += 1;
             gameData.totalTaps++;
+            // Проверка достижения "Первый тап"
+            if (firstTapUnlocked && gameData.totalTaps === 1) {
+                unlockAchievement('first_tap');
+            }
+            // Проверка повышения уровня
             if (gameData.experience >= getExpNeeded()) {
                 gameData.level++;
                 gameData.experience -= getExpNeeded();
@@ -106,7 +112,6 @@
                 checkAchievements();
             }
             showFloatingText('+'+power,'#00ff88');
-            checkAchievements();
             updateUI();
             saveGame();
         }
@@ -128,7 +133,8 @@
                 gameData.balance -= cost;
                 gameData.upgrades[type]++;
                 updateUI(); renderUpgrades(); saveGame();
-                if (tg && tg.sendData) tg.sendData(JSON.stringify({type:'purchase', item: upgrades[type].name, cost}));
+                // Достижение "Первое улучшение"
+                if (!gameData.achievements.includes('first_upgrade')) unlockAchievement('first_upgrade');
                 checkAchievements();
             }
         }
@@ -194,11 +200,21 @@
         function checkAchievements() {
             achievementsList.forEach(a=>{
                 if (!gameData.achievements.includes(a.id) && a.check()){
-                    gameData.achievements.push(a.id);
-                    showFloatingText('🏆 '+a.name,'#ffd700');
-                    if (tg && tg.sendData) tg.sendData(JSON.stringify({type:'achievement',achievement:a.name}));
+                    unlockAchievement(a.id);
                 }
             });
+        }
+        function unlockAchievement(id) {
+            const achievement = achievementsList.find(a => a.id === id);
+            if (!achievement) return;
+            if (!gameData.achievements.includes(id)) {
+                gameData.achievements.push(id);
+                showFloatingText('🏆 '+achievement.name,'#ffd700');
+                // Отправляем в Telegram WebApp только ОДИН раз при открытии достижения!
+                if (tg && tg.sendData) {
+                    tg.sendData(JSON.stringify({type:'achievement',achievement:achievement.name}));
+                }
+            }
         }
         function renderAchievements() {
             document.getElementById('achievements-list').innerHTML =
