--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>Космический Кликер</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-        body { background: #1a1a2e; color: #fff; font-family: Arial,sans-serif; margin:0; padding:20px; user-select: none }
-        .game-container { max-width: 400px; margin:0 auto; text-align:center }
+        body { background:#1a1a2e; color:#fff; font-family:Arial,sans-serif; margin:0; padding:20px; user-select:none }
+        .game-container { max-width:400px; margin:0 auto; text-align:center }
         .stats { display:flex;justify-content:space-between;margin-bottom:20px;background:rgba(255,255,255,0.1);padding:15px;border-radius:10px }
-        .crystal-button { width:200px;height:200px;background:linear-gradient(45deg,#7b68ee,#9370db);border:none;border-radius:50%;color:white;font-size:60px;cursor:pointer;transition:.2s;margin:20px 0;box-shadow:0 10px 20px rgba(123,104,238,0.3) }
-        .crystal-button:active { transform:scale(.95); box-shadow: 0 5px 10px rgba(123,104,238,0.5) }
+        .crystal-button {width:200px;height:200px;background:linear-gradient(45deg,#7b68ee,#9370db);border:none;border-radius:50%;color:#fff;font-size:60px;cursor:pointer;transition:.2s;margin:20px 0;box-shadow:0 10px 20px rgba(123,104,238,0.3)}
+        .crystal-button:active {transform:scale(.95); box-shadow: 0 5px 10px rgba(123,104,238,0.5)}
         .energy-bar{width:100%;height:20px;background:rgba(255,255,255,0.2);border-radius:10px;overflow:hidden;margin:10px 0}
         .energy-fill{height:100%;background:linear-gradient(90deg,#00ff88,#00cc66);transition:.3s}
         .level-progress{width:100%;height:15px;background:rgba(255,255,255,0.2);border-radius:8px;overflow:hidden;margin:10px 0}
         .level-fill{height:100%;background:linear-gradient(90deg,#ffd700,#ffed4e);transition:.3s}
         .upgrade-button{background:#0088cc;color:#fff;border:none;padding:10px 20px;border-radius:8px;margin:5px;cursor:pointer;font-size:14px}
         .upgrade-button:disabled{opacity:.5;cursor:not-allowed}
-        .floating-text { position: absolute; font-size: 20px; font-weight: bold; color: #ffd700; pointer-events: none; animation: floatUp 1s ease-out forwards;}
-        @keyframes floatUp {0%{opacity:1;transform:translateY(0);}100%{opacity:0;transform:translateY(-50px);} }
-        .menu-buttons { display: flex;flex-wrap:wrap;gap:10px;margin-top:20px;justify-content:center }
+        .floating-text {position:absolute;font-size:20px;font-weight:bold;color:#ffd700;pointer-events:none;animation:floatUp 1s ease-out forwards;}
+        @keyframes floatUp {0%{opacity:1;transform:translateY(0);}100%{opacity:0;transform:translateY(-50px);}}
+        .menu-buttons { display:flex;flex-wrap:wrap;gap:10px;margin-top:20px;justify-content:center }
         .menu-screen{display:none;animation:fadeIn .3s}
         @keyframes fadeIn{from{opacity:0;}to{opacity:1;}}
         .back-button{background:#666;color:white;border:none;padding:10px 20px;border-radius:8px;margin-bottom:20px;cursor:pointer}
@@ -75,6 +75,7 @@
             recovery: {name: '⚡ Быстрое восстановление',description: 'Ускоряет восстановление энергии', baseCost: 200, multiplier: 2.0},
             station: {name: '🛸 Космическая станция',description: 'Всё немного лучше',baseCost: 1000,multiplier: 2.2}
         };
+
         function getUpgradeCost(type, level) { return Math.floor(upgrades[type].baseCost * Math.pow(upgrades[type].multiplier, level)); }
         function getTapPower() { return 1 + gameData.upgrades.drill * 2 + Math.floor(gameData.upgrades.station * .5);}
         function getMaxEnergy() { return 1000 + gameData.upgrades.energy * 500 + gameData.upgrades.station*200;}
@@ -92,29 +93,30 @@
             document.getElementById('energy-fill').style.width = (gameData.energy/getMaxEnergy()*100)+'%';
             document.getElementById('level-fill').style.width = (gameData.experience/getExpNeeded()*100)+'%';
         }
+
         function tap() {
             if (gameData.energy <= 0) return;
-            const firstTapUnlocked = !gameData.achievements.includes('first_tap');
             const power = getTapPower();
             gameData.balance += power;
             gameData.energy = Math.max(0, gameData.energy - 1);
             gameData.experience += 1;
             gameData.totalTaps++;
-            // Проверка достижения "Первый тап"
-            if (firstTapUnlocked && gameData.totalTaps === 1) {
+            // Достижение "Первый тап" — только первый раз!
+            if (!gameData.achievements.includes('first_tap') && gameData.totalTaps === 1) {
                 unlockAchievement('first_tap');
             }
-            // Проверка повышения уровня
+            // Повышение уровня
             if (gameData.experience >= getExpNeeded()) {
                 gameData.level++;
                 gameData.experience -= getExpNeeded();
-                showFloatingText('+УРОВЕНЬ!','#ffd700');
-                checkAchievements();
+                showFloatingText('+УРОВЕНЬ!', '#ffd700');
+                checkComboAchievements();
             }
-            showFloatingText('+'+power,'#00ff88');
+            showFloatingText('+' + power, '#00ff88');
             updateUI();
             saveGame();
         }
+
         function showFloatingText(text, color) {
             const floatingText = document.createElement('div');
             floatingText.className = 'floating-text';
@@ -127,6 +129,7 @@
                 if (floatingText.parentNode) floatingText.parentNode.removeChild(floatingText); 
             }, 1000);
         }
+
         function buyUpgrade(type) {
             const cost = getUpgradeCost(type, gameData.upgrades[type]);
             if (gameData.balance >= cost) {
@@ -135,9 +138,10 @@
                 updateUI(); renderUpgrades(); saveGame();
                 // Достижение "Первое улучшение"
                 if (!gameData.achievements.includes('first_upgrade')) unlockAchievement('first_upgrade');
-                checkAchievements();
+                checkComboAchievements();
             }
         }
+
         function showScreen(screen) {
             document.querySelectorAll('.game-container, .menu-screen').forEach(el=>el.style.display='none');
             if (screen === 'main') document.getElementById('main-screen').style.display='block';
@@ -149,6 +153,7 @@
                 if (screen==='achievements') renderAchievements();
             }
         }
+
         function renderUpgrades() {
             const c = document.getElementById('upgrades-list'); c.innerHTML = '';
             Object.keys(upgrades).forEach(type => {
@@ -197,12 +202,19 @@
             {id:'level_10',name:'Опытный майнер',desc:'Достичь 10 уровня',check:()=>gameData.level>=10},
             {id:'rich',name:'Богач',desc:'Накопить 10,000 кристаллов',check:()=>gameData.balance>=10000}
         ];
-        function checkAchievements() {
-            achievementsList.forEach(a=>{
-                if (!gameData.achievements.includes(a.id) && a.check()){
-                    unlockAchievement(a.id);
-                }
-            });
+        function checkComboAchievements() {
+            if (!gameData.achievements.includes('hundred_taps') && gameData.totalTaps >= 100) {
+                unlockAchievement('hundred_taps');
+            }
+            if (!gameData.achievements.includes('first_upgrade') && Object.values(gameData.upgrades).some(v=>v>0)) {
+                unlockAchievement('first_upgrade');
+            }
+            if (!gameData.achievements.includes('level_10') && gameData.level >= 10) {
+                unlockAchievement('level_10');
+            }
+            if (!gameData.achievements.includes('rich') && gameData.balance >= 10000) {
+                unlockAchievement('rich');
+            }
         }
         function unlockAchievement(id) {
             const achievement = achievementsList.find(a => a.id === id);
@@ -210,7 +222,7 @@
             if (!gameData.achievements.includes(id)) {
                 gameData.achievements.push(id);
                 showFloatingText('🏆 '+achievement.name,'#ffd700');
-                // Отправляем в Telegram WebApp только ОДИН раз при открытии достижения!
+                // Отправляем в Telegram WebApp только ОДИН раз при появлении достижения!
                 if (tg && tg.sendData) {
                     tg.sendData(JSON.stringify({type:'achievement',achievement:achievement.name}));
                 }
