--- a/index.html
+++ b/index.html
@@ -42,13 +42,11 @@
             <button class="upgrade-button" onclick="showScreen('upgrades')">🛒 Магазин</button>
             <button class="upgrade-button" onclick="showScreen('profile')">👤 Профиль</button>
             <button class="upgrade-button" onclick="showScreen('leaderboard')">🏆 Топ</button>
-            <button class="upgrade-button" onclick="showScreen('achievements')">🎖️ Достижения</button>
         </div>
     </div>
     <div id="upgrades-screen" class="menu-screen"><button class="back-button" onclick="showScreen('main')">← Назад</button><h2>🛒 Магазин улучшений</h2><div id="upgrades-list"></div></div>
     <div id="profile-screen" class="menu-screen"><button class="back-button" onclick="showScreen('main')">← Назад</button><h2>👤 Профиль</h2><div id="profile-info"></div></div>
     <div id="leaderboard-screen" class="menu-screen"><button class="back-button" onclick="showScreen('main')">← Назад</button><h2>🏆 Топ игроков</h2><div id="leaderboard-list"></div></div>
-    <div id="achievements-screen" class="menu-screen"><button class="back-button" onclick="showScreen('main')">← Назад</button><h2>🎖️ Достижения</h2><div id="achievements-list"></div></div>
     <script>
         const tg = window.Telegram && window.Telegram.WebApp;
         tg && tg.expand();
@@ -63,8 +61,7 @@
             maxEnergy: 1000,
             tapPower: 1,
             totalTaps: 0,
-            upgrades: {drill: 0, energy: 0, auto: 0, recovery: 0, station: 0},
-            achievements: []
+            upgrades: {drill: 0, energy: 0, auto: 0, recovery: 0, station: 0}
         };
         const savedData = localStorage.getItem('cosmic-clicker-' + userId);
         if (savedData) gameData = {...gameData, ...JSON.parse(savedData)};
@@ -95,25 +92,21 @@
         }
 
         function tap() {
-    if (gameData.energy <= 0) return;
-    const power = getTapPower();
-    gameData.balance += power;
-    gameData.energy = Math.max(0, gameData.energy - 1);
-    gameData.experience += 1;
-    gameData.totalTaps++;
-
-    if (gameData.experience >= getExpNeeded()) {
-        gameData.level++;
-        gameData.experience -= getExpNeeded();
-        showFloatingText('+УРОВЕНЬ!', '#ffd700');
-        // никаких ачивок!
-    }
-    showFloatingText('+' + power, '#00ff88');
-    updateUI();
-    saveGame();
-}
-// И всё — никакой tg.sendData, никакой checkAchievements, никакой unlockAchievement
-
+            if (gameData.energy <= 0) return;
+            const power = getTapPower();
+            gameData.balance += power;
+            gameData.energy = Math.max(0, gameData.energy - 1);
+            gameData.experience += 1;
+            gameData.totalTaps++;
+            if (gameData.experience >= getExpNeeded()) {
+                gameData.level++;
+                gameData.experience -= getExpNeeded();
+                showFloatingText('+УРОВЕНЬ!', '#ffd700');
+            }
+            showFloatingText('+' + power, '#00ff88');
+            updateUI();
+            saveGame();
+        }
 
         function showFloatingText(text, color) {
             const floatingText = document.createElement('div');
@@ -134,9 +127,6 @@
                 gameData.balance -= cost;
                 gameData.upgrades[type]++;
                 updateUI(); renderUpgrades(); saveGame();
-                // Достижение "Первое улучшение"
-                if (!gameData.achievements.includes('first_upgrade')) unlockAchievement('first_upgrade');
-                checkComboAchievements();
             }
         }
 
@@ -148,7 +138,6 @@
                 if (screen==='upgrades') renderUpgrades();
                 if (screen==='profile') renderProfile();
                 if (screen==='leaderboard') renderLeaderboard();
-                if (screen==='achievements') renderAchievements();
             }
         }
 
@@ -174,7 +163,6 @@
                     <p>💎 Всего кристаллов: ${gameData.balance}</p>
                     <p>⭐ Уровень: ${gameData.level}</p>
                     <p>👆 Всего тапов: ${gameData.totalTaps}</p>
-                    <p>🏆 Достижений: ${gameData.achievements.length}</p>
                     <p>🤖 Авто-доход/час: ${getAutoIncome()*3600}</p>
                 </div>`;
         }
@@ -192,49 +180,6 @@
                     <div>💎 ${p.balance} | ⭐ ${p.level}</div>
                 </div>`
             ).join('');
-        }
-        const achievementsList=[
-            {id:'first_tap',name:'Первый тап',desc:'Сделать первый тап',check:()=>gameData.totalTaps>=1},
-            {id:'hundred_taps',name:'Сотня тапов',desc:'Сделать 100 тапов',check:()=>gameData.totalTaps>=100},
-            {id:'first_upgrade',name:'Первое улучшение',desc:'Купить любое улучшение',check:()=>Object.values(gameData.upgrades).some(v=>v>0)},
-            {id:'level_10',name:'Опытный майнер',desc:'Достичь 10 уровня',check:()=>gameData.level>=10},
-            {id:'rich',name:'Богач',desc:'Накопить 10,000 кристаллов',check:()=>gameData.balance>=10000}
-        ];
-        function checkComboAchievements() {
-            if (!gameData.achievements.includes('hundred_taps') && gameData.totalTaps >= 100) {
-                unlockAchievement('hundred_taps');
-            }
-            if (!gameData.achievements.includes('first_upgrade') && Object.values(gameData.upgrades).some(v=>v>0)) {
-                unlockAchievement('first_upgrade');
-            }
-            if (!gameData.achievements.includes('level_10') && gameData.level >= 10) {
-                unlockAchievement('level_10');
-            }
-            if (!gameData.achievements.includes('rich') && gameData.balance >= 10000) {
-                unlockAchievement('rich');
-            }
-        }
-        function unlockAchievement(id) {
-            const achievement = achievementsList.find(a => a.id === id);
-            if (!achievement) return;
-            if (!gameData.achievements.includes(id)) {
-                gameData.achievements.push(id);
-                showFloatingText('🏆 '+achievement.name,'#ffd700');
-                // Отправляем в Telegram WebApp только ОДИН раз при появлении достижения!
-                if (tg && tg.sendData) {
-                    tg.sendData(JSON.stringify({type:'achievement',achievement:achievement.name}));
-                }
-            }
-        }
-        function renderAchievements() {
-            document.getElementById('achievements-list').innerHTML =
-                achievementsList.map(a=>{
-                    const unlocked = gameData.achievements.includes(a.id);
-                    return `<div style="background:rgba(255,255,255,0.1);padding:15px;margin:10px 0;border-radius:10px;opacity:${unlocked?'1':'0.5'};">
-                        <div style="font-weight:bold;">${unlocked?'🏆':'🔒'} ${a.name}</div>
-                        <div style="font-size:14px;opacity:.8;">${a.desc}</div>
-                    </div>`;
-            }).join('');
         }
         function saveGame() { localStorage.setItem('cosmic-clicker-'+userId, JSON.stringify(gameData)); }
         setInterval(()=>{
@@ -255,4 +200,3 @@
     </script>
 </body>
 </html>
-
